--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body></body>
+  <body>
+    <div>
+      <h2>Hello world</h2>
+    </div>
+  </body>
 </html>
